--- a/app/views/verMapa.html
+++ b/app/views/verMapa.html
@@ -7,10 +7,8 @@
 			</div>
 		</div>
 	</div><br>
+	<h4>Latitud: {{ map.center.lati }} Longitud: {{map.center.long}}</h1>
 	<div class="row" ng-show="showMapa">
-		<div map-lazy-load="https://maps.google.com/maps/api/js"
-		 map-lazy-load-params="{{googleMapsUrl}}">
-			<ng-map center="52.277565 , -45.962222" zoom="3"></ng-map>
-		</div>
+		<ui-gmap-google-map center="{latitude: map.center.lati, longitude: map.center.long }" zoom="12"></ui-gmap-google-map>
 	</div>
 </div>
