--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,18 @@
 <div class="jumbotron">
   <h1>SocialH4ck</h1>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-3 col-xs-10 col-xs-offset-1 col-lg-6">
+    <img src="images/logo.png" class="img-responsive">
+    </div>
+  </div>
   <p class="lead">
-    <img src="images/logo.png"><br>
     La Startup que prefieres 
   </p>
+
 </div>
 
 <div class="row marketing">
-  <h4>Nuestra Vision</h4>
+  <h4 class="title-center">Nuestra Vision</h4>
   <p>
     En SociaH4ck nos apasiona la tecnología y creemos que la innovación es clave para el cambio. Somos una empresa venezolana especializada en desarrollo web y mercadeo digital. Hemos desarrollado proyectos tanto a nivel nacional como internacional. 
   </p>
